<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:layout_above="@+id/lnKhungDangKy"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size10dp"
        android:textStyle="bold"
        android:textSize="@dimen/size40sp"/>
    <LinearLayout
        android:id="@+id/lnKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/edTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/edittext_style"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/colorGray"
            android:singleLine="true"
            android:textColor="@color/colorGray"/>

        <EditText
            android:id="@+id/edMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/edittext_style"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/matkhau"
            android:padding="@dimen/size10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray" />

        <RadioGroup
            android:id="@+id/rgGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/size10dp">
            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/ngaysinh"
            android:padding="@dimen/size10dp"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="@dimen/size10dp"
            android:textColorHint="@color/colorGray"
            android:singleLine="true"
            android:textColor="@color/colorGray"/>

        <EditText
            android:id="@+id/edCMNDDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/cmnd"
            android:padding="@dimen/size10dp"
            android:drawableLeft="@drawable/card"
            android:drawablePadding="@dimen/size10dp"
            android:textColorHint="@color/colorGray"
            android:singleLine="true"
            android:textColor="@color/colorGray"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnDongYDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorGreen"/>

            <Button
                android:id="@+id/btnThoatDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:background="@color/colorOrange"
                android:layout_margin="@dimen/size10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>