<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size10dp"
        android:text="@string/themthucdon"
        android:textSize="@dimen/size18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edThemTenMonAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:hint="@string/tenmonan"
                android:textColor="@color/colorGray"/>

            <EditText
                android:id="@+id/edThemGiaTien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:hint="@string/giatien"
                android:textColor="@color/colorGray"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_margin="@dimen/size10dp">

                <Spinner
                    android:id="@+id/spinnerLoaiMonAn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:layout_gravity="center">

                </Spinner>

                <ImageButton
                    android:id="@+id/imThemLoaiThucDon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imHinhThucDon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDongYThemMonAn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:layout_weight="1"
            android:padding="@dimen/size20dp"
            android:layout_margin="@dimen/size10dp"
            android:background="@drawable/button_orange"/>

        <Button
            android:id="@+id/btnThoatThemMonAn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:padding="@dimen/size20dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_weight="1"
            android:background="@drawable/button_blue"/>
    </LinearLayout>
</LinearLayout>